// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawTool actions should be initialized first 1`] = `
<section
  className="draw-tool"
>
  <ToggleDrawing
    drawingMode="none"
    shapeMarkers={0}
    toggleDrawing={[MockFunction]}
  />
</section>
`;

exports[`DrawTool actions should save previous markers and trigger cancel when line has been drawn 1`] = `
<section
  className="draw-tool"
>
  <ToggleDrawing
    drawingMode="none"
    shapeMarkers={2}
    toggleDrawing={[MockFunction]}
  />
  <ShapeSummary
    onClearDrawing={[MockFunction]}
    shapeDistanceTxt="1.89 km"
  />
</section>
`;

exports[`DrawTool actions should save previous markers and trigger cancel when polygon has been drawn 1`] = `
<section
  className="draw-tool"
>
  <ToggleDrawing
    drawingMode="none"
    shapeMarkers={3}
    toggleDrawing={[MockFunction]}
  />
</section>
`;

exports[`DrawTool actions should turn drawing on and off when drawing mode has switched 1`] = `
<section
  className="draw-tool"
>
  <ToggleDrawing
    drawingMode="draw"
    shapeMarkers={0}
    toggleDrawing={[MockFunction]}
  />
</section>
`;

exports[`DrawTool actions should turn drawing on and off when drawing mode has switched 2`] = `
<section
  className="draw-tool"
>
  <ToggleDrawing
    drawingMode="none"
    shapeMarkers={0}
    toggleDrawing={[MockFunction]}
  />
</section>
`;
